<resources>
    <string name="crop__cancel">取消</string>
    <string name="crop__done">完成</string>
    <string name="crop__pick_error">图像不可用</string>
    <string name="crop__saving">图像保存中</string>
    <string name="crop__wait">请稍候</string>
    <string name="neox_hello">Hello World, UnitestActivity!</string>
    <string name="app_name">第五人格</string>
    <string name="neox_root">/sdcard/netease/dwrg.common</string>
    <string name="neox_version_name">1.5.2</string>
    <string name="neox_confirm">确定</string>
    <string name="neox_cancel">取消</string>
    <string name="neox_yes">是</string>
    <string name="neox_no">否</string>
    <string name="neox_retry">重试</string>
    <string name="neox_abort">中止</string>
    <string name="neox_ignore">忽略</string>
    <string name="neox_back">返回</string>
    <string name="neox_available">可用</string>
    <string name="neox_unavailable">不可用</string>
    <string name="neox_welcomeview_start_engine">启动游戏引擎</string>
    <string name="neox_welcomeview_rsync_all">Rsync同步所有文件</string>
    <string name="neox_welcomeview_rsync_script">Rsync仅同步脚本文件</string>
    <string name="neox_welcomeview_updated_file_num">已更新文件数量</string>
    <string name="neox_welcomeview_total_update_file_num">需要更新的文件总数</string>
    <string name="neox_dumpview_confirm">确认</string>
    <string name="neox_dumpview_cancel">取消</string>
    <string name="neox_dumpview_label">非常抱歉，我们的程序刚刚发生了一个崩溃，发送错误报告？</string>
    <string name="neox_launcher_start_game">启动游戏</string>
    <string name="neox_launcher_data_dir">数据包位置</string>
    <string name="neox_launcher_copy_data">安装数据包</string>
    <string name="neox_launcher_copying">首次启动，正在努力解压资源...</string>
    <string name="neox_launcher_auto_res">自适应分辨率</string>
    <string name="neox_launcher_adjust_res">调整分辨率</string>
    <string name="neox_launcher_multithread_render">多线程渲染</string>
    <string name="neox_launcher_multithread_gpures">多线程GLES</string>
    <string name="neox_launcher_internal_sd">内置存储</string>
    <string name="neox_launcher_external_sd">外置存储</string>
    <string name="neox_launcher_data_sd">data目录</string>
    <string name="neox_launcher_device_test">机能测试</string>
    <string name="neox_launcher_asset_size_to_copy">需要复制的Asset大小</string>
    <string name="neox_launcher_no_enough_space">空间不足, 请清理内存卡或检查SD卡是否已插入</string>
    <string name="neox_launcher_stop">停止更新</string>
    <string name="neox_launcher_continue">继续更新</string>
    <string name="neox_launcher_warn">警告</string>
    <string name="neox_launcher_not_wifi">你没有使用WIFI,是否继续更新</string>
    <string name="neox_launcher_updating">正在更新</string>
    <string name="neox_launcher_failure">更新失败</string>
    <string name="neox_launcher_failure_engine">游戏版本过旧,请下载最新版本</string>
    <string name="neox_launcher_failure_checkupdate">检查更新失败,请重新启动游戏</string>
    <string name="neox_launcher_check_update">检查更新中....</string>
    <string name="neox_pick_image">选择图像</string>
    <string name="neox_pick_from_camera">相机</string>
    <string name="neox_pick_from_library">相册</string>
    <string name="uni_gm_img_pick_dlg_title">上传方式选择</string>
    <string name="uni_gm_f_private">专属</string>
    <string name="uni_gm_f_msg">消息</string>
    <string name="uni_gm_f_close">关闭</string>
    <string name="uni_gm_f_close_confirm1">确认关闭消息悬浮球?</string>
    <string name="uni_gm_f_close_confirm2">(有新消息时重新显示)</string>
    <string name="uni_gm_f_close_cancel">取消</string>
    <string name="uni_gm_f_close_sure">确定</string>
    <string name="unisdk_protocol_title">用户协议</string>
    <string name="unisdk_protocol_confirm">确 定</string>
    <string name="unisdk_protocol_accept">接 受</string>
    <string name="unisdk_protocol_reject">拒 绝</string>
    <string name="netease_mpay__extra_shared_preference_file_key_prefix">com.netease.mpay.extra.</string>
    <string name="netease_mpay__extra_shared_preference_file_key">com.netease.mpay.netease_mobile_game_sdk_extra</string>
    <string name="netease_mpay__extra_shared_preference_file_key_sandbox">com.netease.mpay.netease_mobile_game_sdk_extra_sandbox</string>
    <string name="netease_mpay__social_data_preference_file_key">com.netease.mpay.social_data</string>
    <string name="netease_mpay__login_shared_preference_file_key_prefix">com.netease.mpay.</string>
    <string name="netease_mpay__login_shared_preference_file_key">com.netease.mpay.netease_mobile_game_sdk</string>
    <string name="netease_mpay__login_shared_preference_file_key_sandbox">com.netease.mpay.netease_mobile_game_sdk_sandbox</string>
    <string name="netease_mpay__login_message_shared_preference_file_key_prefix">com.netease.mpay.message.</string>
    <string name="netease_mpay__dev_tag_menu">menu</string>
    <string name="netease_mpay__dev_warning_title">网易SDK提示</string>
    <string name="netease_mpay__confirm">确认</string>
    <string name="netease_mpay__cancel">取消</string>
    <string name="netease_mpay__ok">确定</string>
    <string name="netease_mpay__channel_hot">推荐</string>
    <string name="netease_mpay__account">帐号</string>
    <string name="netease_mpay__channel_disabled">暂不可用</string>
    <string name="netease_mpay__help">帮助</string>
    <string name="netease_mpay__retry">重试</string>
    <string name="netease_mpay__continue">继续</string>
    <string name="netease_mpay__return">返回</string>
    <string name="netease_mpay__quit">退出</string>
    <string name="netease_mpay__warnning">警告</string>
    <string name="netease_mpay__upgrade">升级</string>
    <string name="netease_mpay__do_scan">扫一扫</string>
    <string name="netease_mpay__next_step">下一步</string>
    <string name="netease_mpay__loading_text">加载中…</string>
    <string name="netease_mpay__set_permission_in_setting">请在设置中开启应用所需的权限</string>
    <string name="netease_mpay__game">游戏</string>
    <string name="netease_mpay__confirm_urs_password">为保证安全，请输入您的邮箱密码</string>
    <string name="netease_mpay__input_password_to_verify_urs">请输入邮箱密码验证身份</string>
    <string name="netease_mpay__webview_need_upgrade">您的系统WebView已经过期，请到应用商店安装最新的WebView应用</string>
    <string name="netease_mpay__retry_later">稍候再试</string>
    <string name="netease_mpay__login_again">重新登录</string>
    <string name="netease_mpay__unknown">未知</string>
    <string name="netease_mpay__refresh">刷新</string>
    <string name="netease_mpay__save_photo_album_done">已经成功保存到相册！</string>
    <string name="netease_mpay__save_photo_album_fail">无法保存到相册！</string>
    <string name="netease_mpay__network_err_data_parsing">无法访问服务器，请稍候再试！</string>
    <string name="netease_mpay__network_err_fetch_config">网络不给力，请检查网络状态后重试</string>
    <string name="netease_mpay__network_err_no_connected">网络不可用，请检查网络设置</string>
    <string name="netease_mpay__network_err_illegal_param">请求参数错误!</string>
    <string name="netease_mpay__network_err_param_encoding">请求参数编码错误！</string>
    <string name="netease_mpay__network_err_server_status">服务器出错，请稍候再试！</string>
    <string name="netease_mpay__network_err_server_read">访问网络出错，请稍候再试！</string>
    <string name="netease_mpay__network_err_client_protocol">协议错误！</string>
    <string name="netease_mpay__network_err_request_method">未知的请求方式！</string>
    <string name="netease_mpay__network_err_fetchurl_others">无法访问服务器，请稍后再试！</string>
    <string name="netease_mpay__network_err_server">服务器错误，请稍候再试！</string>
    <string name="netease_mpay__network_err_cmwap_bad_network">网络状况不佳，请切换到WiFi环境</string>
    <string name="netease_mpay__network_err_no_perr_certificate">登录失败，请尝试切换网络，或稍候再试！</string>
    <string name="netease_mpay__network_err_no_perr_certificate_date_error">访问出错，请正确设置本机系统日期时间后重试！</string>
    <string name="netease_mpay__network_err_invalid_url_address">访问地址无效！</string>
    <string name="netease_mpay__network_warn_no_wifi">当前网络非WiFi环境，是否继续？</string>
    <string name="netease_mpay__network_err_no_local_file">等待页面加载失败，请检查您的配置</string>
    <string name="netease_mpay__network_err_fatal">无法访问该页面，请稍后再试！</string>
    <string name="netease_mpay__network_err_proxy">检测到您使用了代理认证，为了您的帐号安全，请勿使用不可信的代理服务器</string>
    <string name="netease_mpay__network_err_retriable">无法访问页面</string>
    <string name="netease_mpay__err_login_expired_and_login_again">登录已失效，请重新登录</string>
    <string name="netease_mpay__err_login_data_not_exist">登录信息不存在！</string>
    <string name="netease_mpay__err_no_login">用户尚未登录。</string>
    <string name="netease_mpay__send_sms_failed">发送短信失败</string>
    <string name="netease_mpay__login">登录</string>
    <string name="netease_mpay__login_input_urs_template">请输入%1$s</string>
    <string name="netease_mpay__login_input_password">请输入密码</string>
    <string name="netease_mpay__login_input_login_password">请输入登录密码</string>
    <string name="netease_mpay__login_login">登 录</string>
    <string name="netease_mpay__login_confirm_login">确认登录</string>
    <string name="netease_mpay__login_login_immediately">立即登录</string>
    <string name="netease_mpay__login_registration_title">注册新用户</string>
    <string name="netease_mpay__login_weibo_login_title">微博登录</string>
    <string name="netease_mpay__login_bind">绑 定</string>
    <string name="netease_mpay__login_forget_password">忘记密码></string>
    <string name="netease_mpay__login_regist_urs">邮箱帐号注册></string>
    <string name="netease_mpay__login_regist_failed">注册失败</string>
    <string name="netease_mpay__login_confirmed">确  定</string>
    <string name="netease_mpay__login_channel_mobile">网易手机帐号</string>
    <string name="netease_mpay__login_account_login">帐号登录</string>
    <string name="netease_mpay__login_bind_others">绑定其他帐号></string>
    <string name="netease_mpay__login_bind_urs">绑定邮箱帐号></string>
    <string name="netease_mpay__login_channel_others">使用其他帐号登录></string>
    <string name="netease_mpay__login_channel_select">选择登录方式</string>
    <string name="netease_mpay__login_channel_guest">快速游戏</string>
    <string name="netease_mpay__login_channel_urs">网易邮箱帐号</string>
    <string name="netease_mpay__login_channel_weixin">微信</string>
    <string name="netease_mpay__login_channel_qq">QQ</string>
    <string name="netease_mpay__login_channel_google">Google</string>
    <string name="netease_mpay__login_channel_facebook">Facebook</string>
    <string name="netease_mpay__login_input_captcha">请输入短信验证码</string>
    <string name="netease_mpay__login_get_captcha">获取验证码</string>
    <string name="netease_mpay__fetch_again">重新获取</string>
    <string name="netease_mpay__feedback_content_tips">请输入您宝贵的意见和建议（250字内）</string>
    <string name="netease_mpay__feedback_mobile_tips">请输入您的手机号（选填）</string>
    <string name="netease_mpay__feedback_label_mobile">手机号码：</string>
    <string name="netease_mpay__submit">提交</string>
    <string name="netease_mpay__ecard_balance_tip">点数余额：</string>
    <string name="netease_mpay__ecard_need_balance_template">(所需点数：%1$d点)</string>
    <string name="netease_mpay__tips_header">温馨提示：</string>
    <string name="netease_mpay__link_pay_plugin_tips_pay">支付中，请尽快完成支付。</string>
    <string name="netease_mpay__fetch_in_progress">获取中…</string>
    <string name="netease_mpay__login_nettest_title">网络检测</string>
    <string name="netease_mpay__login_nettest_check_localtime">检测系统时间…</string>
    <string name="netease_mpay__login_nettest_check_dns">检测当前DNS…</string>
    <string name="netease_mpay__login_nettest_check_http">检测网络请求…</string>
    <string name="netease_mpay__login_nettest_check_traceroute">检测服务器连接…</string>
    <string name="netease_mpay__login_nettest_check_ping">检测访问延迟状态…</string>
    <string name="netease_mpay__login_nettest_check_finish">请导出报告联系开发组或客服</string>
    <string name="netease_mpay__login_nettest_export_report">导出报告</string>
    <string name="netease_mpay__login_nettest_status_in_progress">检测中</string>
    <string name="epaysdk_cancel">取消</string>
    <string name="epaysdk_id_verify">身份验证</string>
    <string name="epaysdk_ok">确定</string>
    <string name="epaysdk_pls_pick_credit_date">请选择信用卡有效期</string>
    <string name="epaysdk_swipe_face">刷脸验证</string>
    <string name="epaysdk_verification_choose">请选择任一种方式进行身份验证</string>
    <string name="epaysdk_verify_id">验证身份证号和短信</string>
</resources>