<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/buttonStartEngine" android:layout_width="200.0dp" android:layout_height="wrap_content" android:text="@string/neox_welcomeview_start_engine" android:onClick="onStartEngine" />
    <Button android:id="@id/ButtonRsyncAll" android:layout_width="200.0dp" android:layout_height="wrap_content" android:text="@string/neox_welcomeview_rsync_all" android:onClick="onRsyncAll" />
    <Button android:id="@id/buttonRsyncScript" android:layout_width="200.0dp" android:layout_height="wrap_content" android:text="@string/neox_welcomeview_rsync_script" android:onClick="onRsyncScript" />
    <TextView android:id="@id/labelConnectServer" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:id="@id/labelUpdateStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>
