<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="@drawable/netease_mpay__window_dialog_background_default" android:layout_width="@dimen/netease_mpay__panel_width_310" android:layout_height="@dimen/netease_mpay__panel_height_286" android:layout_marginLeft="@dimen/netease_mpay__spacing_3" android:layout_marginRight="@dimen/netease_mpay__spacing_3" android:isScrollContainer="true" skin:mpay_skin_enable="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:skin="http://schemas.android.com/android/mpay/skin">
    <ImageView android:id="@id/netease_mpay__login_cancel_login" android:background="@drawable/netease_mpay__mask_transparent" android:clickable="true" android:layout_width="@dimen/netease_mpay__ic_32" android:layout_height="@dimen/netease_mpay__ic_32" android:src="@drawable/netease_mpay__ic_login_close" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />
    <TextView android:textSize="@dimen/netease_mpay__font_20" android:id="@id/netease_mpay__login_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/netease_mpay__spacing_12" android:layout_marginBottom="@dimen/netease_mpay__spacing_12" android:text="@string/netease_mpay__login_nettest_title" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/netease_mpay__login_nettest_progress_layout_parent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/netease_mpay__spacing_8" android:layout_below="@id/netease_mpay__login_title">
        <FrameLayout android:id="@id/netease_mpay__login_nettest_progress_layout" android:layout_width="@dimen/netease_mpay__net_test_progress_size_110" android:layout_height="@dimen/netease_mpay__net_test_progress_size_110" android:layout_centerInParent="true" />
        <ProgressBar android:layout_gravity="center" android:id="@id/netease_mpay__login_nettest_progressbar" android:layout_width="@dimen/netease_mpay__net_test_progress_size_74" android:layout_height="@dimen/netease_mpay__net_test_progress_size_74" android:indeterminate="true" android:indeterminateDrawable="@drawable/netease_mpay__progressbar_green" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:id="@id/netease_mpay__login_nettest_progress_percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:textColor="@color/netease_mpay__font_color_normal" android:id="@id/netease_mpay__nettest_checking_status" android:paddingLeft="@dimen/netease_mpay__spacing_68" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/netease_mpay__login_nettest_status_in_progress" android:singleLine="true" android:layout_below="@id/netease_mpay__login_nettest_progressbar" android:layout_alignLeft="@id/netease_mpay__login_nettest_progressbar" />
    </RelativeLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="@dimen/netease_mpay__panel_height_48" android:layout_above="@id/netease_mpay__login_nettest_divider">
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:textColor="@color/netease_mpay__button_white_font_color" android:gravity="center" android:id="@id/netease_mpay__login_nettest_check_localtime" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__login_nettest_check_localtime" />
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:textColor="@color/netease_mpay__button_white_font_color" android:gravity="center" android:id="@id/netease_mpay__login_nettest_check_dns" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__login_nettest_check_dns" />
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:textColor="@color/netease_mpay__button_white_font_color" android:gravity="center" android:id="@id/netease_mpay__login_nettest_check_http" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__login_nettest_check_http" />
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:textColor="@color/netease_mpay__button_white_font_color" android:gravity="center" android:id="@id/netease_mpay__login_nettest_check_traceroute" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__login_nettest_check_traceroute" />
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:textColor="@color/netease_mpay__button_white_font_color" android:gravity="center" android:id="@id/netease_mpay__login_nettest_check_ping" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__login_nettest_check_ping" />
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:textColor="@color/netease_mpay__font_color_normal" android:gravity="center" android:id="@id/netease_mpay__login_nettest_check_finish" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__login_nettest_check_finish" />
    </FrameLayout>
    <View android:id="@id/netease_mpay__login_nettest_divider" android:background="@color/netease_mpay__divider_color_green" android:layout_width="match_parent" android:layout_height="@dimen/netease_mpay__border_0_5" android:layout_above="@id/netease_mpay__login_nettest_export_report" />
    <TextView android:textSize="@dimen/netease_mpay__font_20" android:textColor="@color/netease_mpay__font_color_main" android:gravity="center" android:id="@id/netease_mpay__login_nettest_export_report" android:layout_width="match_parent" android:layout_height="@dimen/netease_mpay__panel_height_48" android:text="@string/netease_mpay__login_nettest_export_report" android:layout_alignParentBottom="true" />
</RelativeLayout>
