<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/netease_mpay__background_color_normal" android:paddingLeft="@dimen/netease_mpay__spacing_12" android:paddingTop="@dimen/netease_mpay__spacing_18" android:paddingRight="@dimen/netease_mpay__spacing_12" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="@dimen/netease_mpay__font_14" android:textColor="@color/netease_mpay__edit_font_color" android:textColorHint="@color/netease_mpay__edit_hint_font_color" android:gravity="left|top" android:id="@id/netease_mpay__feedback_content" android:background="@drawable/netease_mpay__edit_view" android:padding="@dimen/netease_mpay__spacing_3" android:layout_width="match_parent" android:layout_height="@dimen/netease_mpay__panel_height_211" android:hint="@string/netease_mpay__feedback_content_tips" style="@style/NeteaseMpay.Login.Widget.EditText.ImeNext" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/netease_mpay__spacing_15">
        <TextView android:textSize="@dimen/netease_mpay__font_15" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/netease_mpay__feedback_label_mobile" />
        <EditText android:textSize="@dimen/netease_mpay__font_14" android:textColor="@color/netease_mpay__edit_font_color" android:textColorHint="@color/netease_mpay__edit_hint_font_color" android:gravity="left|center" android:id="@id/netease_mpay__feedback_mobile" android:background="@drawable/netease_mpay__edit_view" android:padding="@dimen/netease_mpay__spacing_3" android:layout_width="match_parent" android:layout_height="@dimen/netease_mpay__panel_height_38" android:hint="@string/netease_mpay__feedback_mobile_tips" android:singleLine="true" android:inputType="number" style="@style/NeteaseMpay.Login.Widget.EditText.ImeDone" />
    </LinearLayout>
    <Button android:textSize="@dimen/netease_mpay__font_16" android:id="@id/netease_mpay__feedback_upload" android:layout_width="match_parent" android:layout_height="@dimen/netease_mpay__panel_height_41" android:layout_marginTop="@dimen/netease_mpay__spacing_50" android:text="@string/netease_mpay__submit" style="@style/NeteaseMpay.Login.Widget.Button.Vigilant" />
</LinearLayout>
