<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0dp" android:textColor="#ff333333" android:layout_gravity="center_horizontal" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/epaysdk_pls_pick_credit_date" />
    <com.netease.epay.sdk.base.view.YearDatePicker android:id="@id/year_date_picker" android:layout_width="268.0dp" android:layout_height="wrap_content" />
    <View android:background="#ff999999" android:layout_width="match_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50.0dp">
        <Button android:textSize="16.0dp" android:textColor="#ff007aff" android:gravity="center" android:id="@id/btn_twobtnmsg_dialog_left" android:background="@null" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/epaysdk_cancel" android:layout_weight="1.0" />
        <View android:background="#ff999999" android:layout_width="1.0px" android:layout_height="match_parent" />
        <Button android:textSize="17.0dp" android:textColor="#ff007aff" android:gravity="center" android:id="@id/btn_twobtnmsg_dialog_right" android:background="@null" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/epaysdk_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
