<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.netease.epay.sdk.base.view.ActivityTitleBar android:id="@id/atb" android:layout_width="match_parent" android:layout_height="55.0dp" app:epaysdk_main_title="@string/epaysdk_id_verify" />
    <TextView android:textSize="14.0dp" android:textColor="#ff999999" android:paddingLeft="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:layout_marginRight="15.0dp" android:layout_marginBottom="10.0dp" android:text="@string/epaysdk_verification_choose" />
    <RelativeLayout android:id="@id/rlId" android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="50.0dp">
        <include layout="@layout/epaysdk_view_divider" />
        <TextView android:textSize="15.0dp" android:textColor="#ff444444" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="15.0dp" android:text="@string/epaysdk_verify_id" />
        <TextView android:textSize="15.0dp" android:textColor="#ff999999" android:gravity="center" android:id="@id/tvCardsCount" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="15.0dp" android:drawableRight="@drawable/epaysdk_icon_next" android:drawablePadding="10.0dp" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rlFace" android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="50.0dp">
        <include layout="@layout/epaysdk_view_divider" />
        <TextView android:textSize="15.0dp" android:textColor="#ff444444" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="15.0dp" android:text="@string/epaysdk_swipe_face" />
        <TextView android:textSize="15.0dp" android:textColor="#ff999999" android:gravity="center" android:id="@id/tvRedPapersCount" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="15.0dp" android:drawableRight="@drawable/epaysdk_icon_next" android:drawablePadding="10.0dp" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <include layout="@layout/epaysdk_view_divider" />
</LinearLayout>
