<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:paddingLeft="@dimen/netease_mpay__spacing_16" android:paddingTop="@dimen/netease_mpay__spacing_24" android:paddingBottom="@dimen/netease_mpay__spacing_24" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/netease_mpay__font_16" android:textColor="@color/netease_mpay__black_80" android:gravity="center_vertical" android:id="@id/netease_mpay__account_urs" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/netease_mpay__spacing_8">
        <TextView android:textSize="@dimen/netease_mpay__font_16" android:textColor="@color/netease_mpay__font_color_gray" android:gravity="center_vertical" android:layout_gravity="bottom" android:id="@id/netease_mpay__recharge_channel_balance_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/netease_mpay__fetch_in_progress" android:maxLines="1" />
        <TextView android:textSize="@dimen/netease_mpay__font_16" android:textColor="@color/netease_mpay__color_black" android:gravity="center_vertical" android:id="@id/netease_mpay__account_balance_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/netease_mpay__ecard_balance_tip" android:maxLines="1" />
        <TextView android:textSize="@dimen/netease_mpay__font_16" android:textColor="@color/netease_mpay__font_color_main" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/netease_mpay__account_balance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" />
        <TextView android:textSize="@dimen/netease_mpay__font_12" android:textColor="@color/netease_mpay__color_black" android:id="@id/netease_mpay__price_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/netease_mpay__spacing_4" android:layout_marginRight="@dimen/netease_mpay__spacing_24" android:text="@string/netease_mpay__ecard_need_balance_template" android:maxLines="1" />
    </LinearLayout>
</LinearLayout>
