<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.netease.mpay.widget.webview.js.WebViewEx android:scrollbarStyle="insideOverlay" android:id="@id/netease_mpay__link_pay_webview" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/netease_mpay__link_pay_layout" android:background="@color/netease_mpay__background_color_normal" android:paddingLeft="@dimen/netease_mpay__spacing_16_scale" android:paddingRight="@dimen/netease_mpay__spacing_16_scale" android:paddingBottom="@dimen/netease_mpay__spacing_10_scale" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="0.0dp" android:layout_weight="1.0">
            <TextView android:textSize="20.0sp" android:textColor="@color/netease_mpay__font_color_normal" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/netease_mpay__link_pay_plugin_tips_pay" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/netease_mpay__spacing_10_5">
            <TextView android:textSize="@dimen/netease_mpay__font_14" android:textColor="@color/netease_mpay__font_color_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/netease_mpay__tips_header" />
            <TextView android:textSize="@dimen/netease_mpay__font_14" android:textColor="@color/netease_mpay__font_color_gray_86" android:id="@id/netease_mpay__link_pay_plugin_tips_plugin" android:layout_width="wrap_content" android:layout_height="match_parent" />
        </LinearLayout>
        <Button android:textSize="@dimen/netease_mpay__font_16" android:gravity="center" android:id="@id/netease_mpay__link_pay_return" android:layout_width="match_parent" android:layout_height="@dimen/netease_mpay__panel_height_53" android:layout_marginTop="@dimen/netease_mpay__spacing_15" android:layout_marginBottom="@dimen/netease_mpay__spacing_15" android:text="@string/netease_mpay__return" style="@style/NeteaseMpay.Login.Widget.Button.Vigilant" />
    </LinearLayout>
</FrameLayout>
