<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/netease_mpay__edit_view" android:layout_width="match_parent" android:layout_height="match_parent" skin:mpay_skin_enable="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:skin="http://schemas.android.com/android/mpay/skin">
    <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/netease_mpay__ic_26" android:layout_height="@dimen/netease_mpay__ic_26" android:layout_marginLeft="@dimen/netease_mpay__spacing_10" android:layout_marginRight="@dimen/netease_mpay__spacing_8" android:src="@drawable/netease_mpay__ic_input_sms" android:scaleType="fitXY" skin:mpay_skin_enable="true" />
    <EditText android:textSize="@dimen/netease_mpay__font_13" android:textColor="@color/netease_mpay__edit_font_color" android:textColorHint="@color/netease_mpay__edit_hint_font_color" android:gravity="left|center" android:id="@id/netease_mpay__login_captcha" android:background="@null" android:layout_width="0.0dp" android:layout_height="match_parent" android:hint="@string/netease_mpay__login_input_captcha" android:layout_weight="1.0" android:inputType="number" android:isScrollContainer="true" android:textCursorDrawable="@null" skin:mpay_skin_enable="true" style="@style/NeteaseMpay.Login.Widget.EditText.ImeDone" />
    <View android:background="@color/netease_mpay__divider_color" android:layout_width="@dimen/netease_mpay__border_0_5" android:layout_height="match_parent" android:layout_marginTop="@dimen/netease_mpay__spacing_7" android:layout_marginBottom="@dimen/netease_mpay__spacing_8" skin:mpay_skin_enable="true" />
    <FrameLayout android:layout_gravity="center_vertical" android:layout_width="@dimen/netease_mpay__panel_width_79" android:layout_height="@dimen/netease_mpay__panel_height_31" android:layout_marginLeft="@dimen/netease_mpay__spacing_7" android:layout_marginRight="@dimen/netease_mpay__spacing_7">
        <TextView android:textSize="@dimen/netease_mpay__font_13" android:textColor="@color/netease_mpay__font_color_main" android:gravity="center" android:id="@id/netease_mpay__login_get_captcha" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__login_get_captcha" skin:mpay_skin_enable="true" />
        <TextView android:textSize="@dimen/netease_mpay__font_13" android:textColor="@color/netease_mpay__font_color_main" android:gravity="center" android:id="@id/netease_mpay__login_captcha_countdown" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/netease_mpay__fetch_again" skin:mpay_skin_enable="true" />
    </FrameLayout>
</LinearLayout>
